--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -194,7 +194,7 @@
           url: /applications/cassandra-snaps.html
       - title: PostgreSQL
         url: /applications/postgres.html
-      - title : Microsoft SQL Server on Portworx
+      - title : Microsoft SQL Server
         url: /applications/mssql-server.html
     - title: Messaging 
       folderitems:
