--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ output: web
 topnav_title: Portworx Documentation
 # this appears on the top navigation bar next to the home button
 
-site_title: Portworx Documentation 
+site_title: Portworx Docs 
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 company_name: Portworx
